crates/strider/tests/snapshots/v3__arm_be__abi__mixed_args.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "4" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[5] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "8" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v9" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v9" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "11" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "14" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "17" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="arg[4] ← ram[sp + 0]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
